[tool.poetry]
name = "rarbg-search"
version = "0.1.0"
description = ""
authors = ["j-minster <jack@minster.com.au>"]
readme = "README.md"
packages = [{include = "rarbgsearch"}]

[tool.poetry.dependencies]
python = "^3.10"
python-lsp-server = "^1.7.4"
click = "^8.1.6"
pick = "^2.2.0"
hurry-filesize = "^0.9"

[tool.poetry.scripts]
rarbgsearch = "rarbgsearch.rarbgsearch:search"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
